crates/sui-adapter-transactional-tests/tests/programmable_transaction_examples/merge_coin_shared_real_coin.exp
processed 5 tasks

init:
A: object(0,0)

task 1 'publish'. lines 8-17:
Error: error[E03002]: unbound module
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpsG1iYI:10:9
   │
10 │     use sui::sui::SUI;
   │         ^^^^^^^^ Invalid 'use'. Unbound module: 'sui::sui'

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpsG1iYI:13:50
   │
13 │         transfer::public_share_object(coin::zero<BFC>(ctx))
   │                                                  ^^^ Unbound type 'BFC' in current scope



task 2 'run'. lines 19-19:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 21-21:
Error: task 3, lines 21-21. Unbound fake id 2,0

task 4 'programmable'. lines 23-24:
Error: INVALID TEST. Unknown object, object(2,0)
